[tool.poetry]
name = "toml"
version = "0.1.0"
description = ""
authors = ["GaliS22 <galib22p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.25.0"
numpy = "1.24.3"
pydantic = "^2.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
